[package]
name = "Derelict"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
anu = { path = "libs/anu" }
tracing = { path = "libs/tracing/tracing" }


[dependencies]
anu = { git = "https://github.com/Svengali/anu.git" }
tracing = "0.2.0"

